add assets & cleanup codes

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Dorang landing page.">
-    <meta name="author" content="Devcrud">
-    <title>Dorang | Free Bootstrap 4.3.x template</title>
+    <meta name="description" content="Yet Another Portfolio Page.">
+    <meta name="author" content="Sayan">
+    <title>Sayan | Biswas A personal portfolio</title>
+    <link rel="icon" type="image/x-icon" href="assets/imgs/placeholder.svg">
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
 
