Refine Site aesthetics & Fix Broken links

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap + Dorang main styles -->
 	<link rel="stylesheet" href="assets/css/dorang.css">
+	
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home" class="dark-theme">
@@ -19,13 +20,12 @@
     <!-- page navbar -->
     <nav class="page-navbar" data-spy="affix" data-offset-top="10">
         <ul class="nav-navbar container">
-            <li class="nav-item"><a href="#" class="nav-link">Instagram</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Github</a></li>
+            <li class="nav-item"><a href="https://www.instagram.com/sober.4ever/" target="_blank" class="nav-link">Instagram</a></li>
+            <li class="nav-item"><a href="https://github.com/samgrande/" target="_blank" class="nav-link">Github</a></li>
             <li class="nav-item"><a href="#" class="nav-link"><img src="assets/imgs/placeholder.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, weber Landing page"></a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Resume</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">LinkedIn</a></li>
-                </div>
-            </li>
+            <li class="nav-item"><a href="https://www.linkedin.com/in/sayan-biswas-4b3a79152/" target="_blank" class="nav-link">LinkedIn</a></li>
+            <li class="nav-item"><a href="https://www.youtube.com/channel/UCe-rCBCI5TROVbc2eilW8HA" target="_blank" class="nav-link">Youtube</a></li>
+   
         </ul>
     </nav><!-- end of page navbar -->
 
@@ -46,33 +46,29 @@
             <p class="title mb-0">Hi</p>
             <h2 class="header-title">I'm সাyan.</h2>
 			<p class="header-subtitle">Coding, Gaming, Photography, Digital Art and Smoking pot are the things I love to do. </p>
-			<p class="header-subtitle">Pss, I'm also a lil good at editing videos. Check Out Below. </p>
+			<p class="header-subtitle">Wanna Cut The crap and check my Resume?. </p>
 
-            <button class="btn btn-theme-color modal-toggle"><i class="ti-control-play text-danger"></i> Watch Me</button>
+            <button class="btn btn-theme-color modal-toggle"><i class="ti-control-play text-danger"></i> <a href="./assets/Sayan Biswas Resume.pdf" target="_blank">Click Me</a></button>
 
         </div>
     </header><!-- end of page header -->
 
-    <!-- modal -->
-    <div class="modalBox">
-        <div class="modalBox-body">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZDRipbs8IDA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>          
-    </div><!-- end of modal -->
+   <!-- end of modal -->
 
     <!-- page container -->
     <div class="parallaxpic"></div>
     <div class="container page-container">
         <div class="col-md-10 col-lg-8 m-auto">
 			<p class="title mb-4"></p>
-            <h6 class="title mb-5">About Me</h6>
+            <h6 class="title mb-2">About Me</h6>
+			<p class="nav-item"><img src="assets/imgs/pattern 2.png" style="width:200px;height:auto; background-color: #FC1750 ;"></p>
             <p class="mb-5">Greetings, I am Sayan, an enthusiastic 24-year-old novice with a strong enthusiasm for digital art, programming, information technology, and altering. I have an intense interest in technology and inventiveness, I am thrilled to investigate the universe of digital craftsmanship and bring my special point of view to life through coding and modifying. I am continually eager to find out about new ideas in these areas and make something fresh. I wish to be an aspect of the digital art world and watch my creation come to life. Look out for my future projects and commitments in the realm of technology and digital art.</p>
         </div>  
 
         <!-- row -->
 <div>
-  <h6 class="title mb-5">Timeline</h6>
-
+  <h6 class="title mb-2">Timeline</h6>
+ <p class="nav-item"><img src="assets/imgs/pattern 1.png" style="width:190px;height:auto; background-color: #FC1750 ;"></p>
   <ul class="timeline">
     <li class="event" data-date="65Million B.C.">
       <h2 class="title mb-5">Dinosaurs Roamed the Earth</h2>
@@ -101,9 +97,13 @@
 </div>
 
         <div class="col-md-10 col-lg-8 m-auto">
-            <h6 class="title mb-4 mt-5 pt-5">The Journal</h6>
-            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
+            <h6 class="title mb-4 mt-5 pt-2">The Journal</h6>
+			<p class="nav-item"><img src="assets/imgs/pattern 4.png" style="width:200px;height:auto; background-color: #FC1750 ;"></p>
+            <p class="mb-5">I am unwavering in my ambition to attain my objectives and construct a fruitful future for myself. I aspire to become a prosperous businessperson, launching organizations that make a benevolent effect on society and the environment. I will toil hard to enhance my abilities in leadership and business management, and I will encompass myself with a group of like-minded people who share my enthusiasm for creating a variation. 
+
+I am also wholeheartedly devoted to constantly learning and advancing both personally and professionally. I will make sure to attend industry conferences, workshops, and networking events to stay current on the most recent patterns and developments in my domain. I will also accept difficult undertakings and fresh responsibilities to push myself out of my comfort zone and master new abilities.
+
+In addition to my professional dreams, I also have a powerful desire to give to my community. I intend to contribute my time and resources to back institutions that correspond with my values and create a genuine impact on people's lives.</p>
         </div>
 
         <!-- row -->
@@ -117,15 +117,16 @@
         <div class="container">
             <div class="col-md-10 col-lg-8 m-auto">
                 <h6 class="title mb-2">Au revoir</h6>
-				<p class="mb-2">Thanks for visiting my website.Really means aa lot.</p>
-                <p class="mb-2">Feel Free To Write Me A Mail.</p>
+				<p class="mb-2">Thanks for visiting my website.</p>
+                <p class="mb-2">Feel Free To Write Me A Mail</p>
+				<h2 class="nav-item"><a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&su=Hi+There&to=talktosayan35@gmail.com" target="_blank" class="nav-link"><i class="ti-email text-danger"></i></a></h2>
 				
 
             </div>
 
             <!-- footer -->
             <footer class="footer">
-                <p class="infos">&copy; <script>document.write(new Date().getFullYear())</script>, Made with <i class="ti-heart text-danger"></i> by <a href="http://www.devcrud.com">Sayan</a></p>
+                <p class="infos">&copy; <script>document.write(new Date().getFullYear())</script>, Made with <i class="ti-heart text-danger"></i> by <a href="#">Sayan</a></p>
             </footer><!-- end of footer -->
 
         </div><!-- end of container -->
