Add Biodata Popup

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="header-content">
             <p class="title mb-0">Hi</p>
             <h2 class="header-title">I'm সাyan.</h2>
-			<p class="header-subtitle">Coding, Gaming, Photography, Digital Art and Smoking pot are the things I love to do. </p>
+			<p class="header-subtitle">Coding, Gaming, Photography, Digital Art and Drinking Beer are the things I love to do. </p>
 			<p class="header-subtitle">Wanna Cut The crap and check my Resume?. </p>
 
             <button class="btn btn-theme-color modal-toggle"><i class="ti-control-play text-danger"></i> <a href="./assets/Sayan Biswas Resume.pdf" target="_blank">Click Me</a></button>
@@ -95,7 +95,29 @@
     </li>
   </ul>
 </div>
-
+<p></p>
+<p class="nav-item mb-5"><img src="assets/imgs/pattern 3.png" style="width:200px;height:auto; background-color: #FC1750 ;"></p>
+<div class="container">
+  <a class="button" href="#popup">My Bio</a>
+  <div class="popup" id="popup">
+    <div class="popup-inner">
+      <div class="popup__photo">
+        <img src="./assets/imgs/profile.jpg" alt="">
+      </div>
+      <div class="popup__text">
+		<h1>Biodata</h1>
+		<li>DoB : 06/01/1999</li>
+        <li>Hight : 5'9"</li>
+		<li>Weight : 156 lbs.</li>
+		<li>Nationality : Indian</li>	
+		<li>Address : kolkata, India</li>	
+      </div>
+      <a class="popup__close" href="#">X</a>
+    </div>
+  </div>
+</div>
+		<p class="mb-5"></p>
+		<p class="nav-item mb-5"><img src="assets/imgs/pattern 3.png" style="width:200px;height:auto; background-color: #FC1750 ;"></p>
         <div class="col-md-10 col-lg-8 m-auto">
             <h6 class="title mb-4 mt-5 pt-2">The Journal</h6>
 			<p class="nav-item"><img src="assets/imgs/pattern 4.png" style="width:200px;height:auto; background-color: #FC1750 ;"></p>
